--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,9 @@
   "rules": {
     "@typescript-eslint/no-unused-vars": "off",
     "react/no-unescaped-entities": "off",
-    "react-hooks/exhaustive-deps": "off"
-  }
+    "react-hooks/exhaustive-deps": "off",
+    "react/display-name": "off",
+    "import/no-anonymous-default-export": "off"
+  },
+  "ignorePatterns": ["node_modules/*", ".next/*", "out/*"]
 }
